--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           command: |
             curl -fsSl https://deb.nodesource.com/setup_16.x | sudo -E bash -
             sudo apt-get install -y nodejs
+            sudo apt install libssl1.1
             node -v
             npm -v
             docker build -t udagram-api-feed ./udagram-api-feed
