--- a/env-configmap.yaml
+++ b/env-configmap.yaml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: env-configmap
 data:
-  POSTGRES_HOST: exercise.cjlk0ajhdurj.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: exercise-monolith.cuodhggwadyj.us-east-1.rds.amazonaws.com
   POSTGRES_DB: postgres
-  AWS_BUCKET: arn:aws:s3:::exercise-bucket-ban
+  AWS_BUCKET: arn:aws:s3:::exercise-monolith
   AWS_REGION: us-east-1
   AWS_PROFILE: default
   JWT_SECRET: testing
