--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: udagram-api-feed
   namespace: default
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: udagram-api-feed
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: udagram-api-feed
-          image: minhndn/udagram-api-feed:v5
+          image: minhndn/udagram-api-feed:v4
           ports:
             - containerPort: 8080 
           imagePullPolicy: IfNotPresent
@@ -61,3 +61,29 @@ spec:
                   name: env-configmap
                   key: JWT_SECRET
       restartPolicy: Always
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: hpa-udagram-api-feed
+  namespace: default
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: udagram-api-feed
+  minReplicas: 2
+  maxReplicas: 5
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
+  - type: Resource
+    resource:
+      name: memory
+      target:
+        type: Utilization
+        averageUtilization: 70
