--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: udagram-reverseproxy
   namespace: default
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: udagram-reverseproxy
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: udagram-reverseproxy
-          image: minhndn/reverseproxy:v5
+          image: minhndn/udagram-reverseproxy:v5
           imagePullPolicy: IfNotPresent
           env:
             - name: POSTGRES_USERNAME
@@ -59,3 +59,30 @@ spec:
                   name: env-configmap
                   key: JWT_SECRET
       restartPolicy: Always
+
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: hpa-udagram-reverseproxy
+  namespace: default
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: udagram-reverseproxy
+  minReplicas: 2
+  maxReplicas: 5
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
+  - type: Resource
+    resource:
+      name: memory
+      target:
+        type: Utilization
+        averageUtilization: 70
