--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -58,8 +58,14 @@ spec:
                 configMapKeyRef:
                   name: env-configmap
                   key: JWT_SECRET
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
       restartPolicy: Always
-
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
